# glibport

./: README.md  buildenv  cicd-dev.groovy  cicd-stable.groovy
libffi-patches/: src.patch  zos.patch
libffi_built/: meson.build
patches/: disable-libffi-wrap.patch  p1.patch
